--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       var socket = io();
       var el = document.getElementById('server-time');
       socket.on('time', function(timeString) {
-        el.innerHTML = 'Server time: ' + timeString;
+        el.innerHTML = 'Kello on: ' + timeString;
       });
     </script>
   </body>
