--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
+    <script src="sketch.js"></script>
+    <style type="text/css">
+    	body {
+    		overscroll-behavior-y: contain;
+    	}
+    </style>
+  </head>
   <body>
-    <p id='server-time'></p>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
-      var el = document.getElementById('server-time');
-      socket.on('time', function(timeString) {
-        el.innerHTML = 'Kello on: ' + timeString;
-      });
-    </script>
   </body>
 </html>
